--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,13 +9,23 @@
 
 /* Reset */
 
-	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+	html, body, div, span, applet, object, iframe, h1, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
 		border: 0;
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline;
+	}
+
+	h2,h1{
+		margin: 0;
+		padding: 0;
+		border: 0;
+		font-size: 100%;
+		font: inherit;
+		vertical-align: baseline;
+		text-align: center;
 	}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -1946,6 +1956,7 @@
 			list-style: none;
 			padding-left: 0;
 			margin: -1em 0 2em -1em;
+			text-align: center;
 		}
 
 			ul.icons li {
@@ -2729,11 +2740,11 @@
 						margin-bottom: 0;
 					}
 
-			.tiles article.style1 > .image:before {
-				background-color: #f2849e;
+			.tiles article.tile > .image:before {
+				background-color: #797b7f;
 			}
 
-			
+
 
 			body:not(.is-touch) .tiles article:hover > .image {
 				-moz-transform: scale(1.1);
@@ -3176,6 +3187,9 @@
 	#footer {
 		padding: 5em 0 6em 0 ;
 		background-color: #f6f6f6;
+		margin: auto;
+
+
 	}
 
 		#footer > .inner {
@@ -3191,29 +3205,27 @@
 			-webkit-flex-direction: row;
 			-ms-flex-direction: row;
 			flex-direction: row;
+
+
+			position: relative;
+    	margin: 0 auto;
+
 		}
 
-			#footer > .inner > * > :last-child {
-				margin-bottom: 0;
-			}
-
-			#footer > .inner section:nth-child(1) {
-				width: calc(66% - 2.5em);
-				margin-right: 2.5em;
-			}
-
-			#footer > .inner section:nth-child(2) {
-				width: calc(33% - 2.5em);
-				margin-left: 2.5em;
+			#footer > .inner section {
+				margin: 0 auto;
 			}
 
 			#footer > .inner .copyright {
-				width: 100%;
-				padding: 0;
+				/*width: 50%;
+				padding: 30px;*/
 				margin-top: 5em;
 				list-style: none;
 				font-size: 0.8em;
 				color: rgba(88, 88, 88, 0.5);
+    		text-align: center;
+				/*width: 50%;*/
+    		margin: 0 auto;
 			}
 
 				#footer > .inner .copyright a {
@@ -3240,29 +3252,20 @@
 				padding: 5em 0 3em 0 ;
 			}
 
-				#footer > .inner section:nth-child(1) {
-					width: calc(66% - 1.25em);
-					margin-right: 1.25em;
-				}
 
-				#footer > .inner section:nth-child(2) {
+				/*#footer > .inner section:nth-child(2) {
 					width: calc(33% - 1.25em);
 					margin-left: 1.25em;
-				}
+				}*/
 
 		}
 
 		@media screen and (max-width: 980px) {
 
-			#footer > .inner section:nth-child(1) {
-				width: 66%;
-				margin-right: 0;
-			}
-
-			#footer > .inner section:nth-child(2) {
-				width: calc(33% - 2.5em);
-				margin-left: 2.5em;
-			}
+			/*#footer > .inner section:nth-child(2) {
+				width: calc(33% - 1.25em);
+				margin-left: 1.25em;
+			}*/
 
 		}
 
@@ -3279,24 +3282,14 @@
 					flex-direction: column;
 				}
 
-					#footer > .inner section:nth-child(1) {
-						width: 100%;
-						margin-right: 0;
-						margin: 3em 0 0 0;
-					}
+				/*#footer > .inner section:nth-child(2) {
+					width: calc(33% - 1.25em);
+					margin-left: 1.25em;
+				}*/
 
-					#footer > .inner section:nth-child(2) {
-						-moz-order: -1;
-						-webkit-order: -1;
-						-ms-order: -1;
-						order: -1;
-						width: 100%;
-						margin-left: 0;
-					}
-
-					#footer > .inner .copyright {
-						margin-top: 3em;
-					}
+				#footer > .inner .copyright {
+					margin-top: 3em;
+				}
 
 		}
 
@@ -3314,9 +3307,9 @@
 					line-height: inherit;
 				}
 
-					#footer > .inner .copyright li:first-child {
+					/*#footer > .inner .copyright li:first-child {
 						margin-top: 0;
-					}
+					}*/
 
 		}
 
