--- a/assets/css/photoWebsite.css
+++ b/assets/css/photoWebsite.css
@@ -3309,9 +3309,11 @@ margin-top: 20px;
 text-align: center;
 }
 #center img {
-height: 370px;
-width: 370px;
-vertical-align: middle;
+height: auto;
+max-width: 100%;
+/*height: 720px;
+width: 1280px;
+vertical-align: left;*/
 }
 
 
