--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -614,6 +614,89 @@
 	vertical-align: middle;
 }
 
+
+#center img {
+height: auto;
+max-width: 100%;
+/*height: 720px;
+width: 1280px;
+vertical-align: left;*/
+}
+
+
+/* Sidebar -- NOT USING BELOW THIS YET */
+
+#metadata {
+	margin: 			0px 20px 60px 20px;
+	padding: 			50px 0 0 0;
+	border-top:			1px solid rgb(200,200,200);
+}
+#metadata li {
+	margin-bottom: 		30px;
+}
+#metadata a {
+	font-weight:		400;
+}
+
+/* outside links stay bold (since they aren't to sort terms) */
+#metadata a.outside-link, #resources a, #notes a {
+	font-weight:		600;
+}
+#meta-project-name {
+	display: 			none;		/* activated when "sticking" to top */
+}
+
+/* Artwork */
+
+#artwork {
+	padding: 			0 20px 20px 20px;
+}
+#artwork h1 {
+	margin:				0.75em 0 0.3em 0;
+}
+#artwork p, #experiments p {
+	margin-bottom: 		2em;
+	text-align: 		justify;
+}
+#artwork p+p, #experiments p+p {
+	text-indent: 		2em;
+}
+#artwork img:nth-child(n+2), #artwork img + p {
+	margin-top: 40px;
+}
+.no-indent {
+	text-indent:		0 !important;
+	margin-bottom: 		1em !important;
+}
+.project-link {
+	margin-bottom:		2em;
+}
+.imagesTwoUp {
+	width: 				45%;
+}
+.imagesTwoUp:nth-child(even) {
+	margin-left: 		4%;
+}
+.normalList {
+	margin-top: -0.8em;
+	list-style: disc inside none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* 404 PAGE */
 #page-not-found {
 	text-align:  		center;
