--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -608,19 +608,20 @@
 	margin-top: 20px;
 	text-align: center;
 }
-#center img {
+/* #center img {
 	height: auto;
 	max-width: 370px;
 	vertical-align: middle;
-}
+} */
 
 
 #center img {
-height: auto;
-max-width: 100%;
-/*height: 720px;
-width: 1280px;
-vertical-align: left;*/
+	height: auto;
+	max-width: 100%;
+	vertical-align: middle;
+	/*height: 720px;
+	width: 1280px;
+	vertical-align: left;*/
 }
 
 
@@ -681,18 +682,6 @@ vertical-align: left;*/
 	margin-top: -0.8em;
 	list-style: disc inside none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
