--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,9 +92,9 @@
 
 	h1 {
 		font-size: 2.75em;
-		font-weight: 700;
+		/*font-weight: 700;*/
 		line-height: 1.3;
-		margin: 0 0 1em 0;
+		/*margin: 0 0 1em 0;*/
 		letter-spacing: -0.035em;
 	}
 
@@ -103,11 +103,11 @@
 	}
 
 	h2, h3, h4, h5, h6 {
-		font-weight: 900;
+		/*font-weight: 900;*/
 		line-height: 1.5;
-		margin: 0 0 2em 0;
-		text-transform: uppercase;
-		letter-spacing: 0.35em;
+		margin: 0 0 1.2em 0;
+		/*text-transform: uppercase;*/
+		letter-spacing: 0.15em;
 	}
 
 	h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -189,7 +189,7 @@
 		}
 
 		.icon > .label {
-			display: none;
+			/*display: none;*/
 		}
 
 /* Box */
