--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ h6 {
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
-  background: #f2f2f2; /*#040b14; */
+  background: #ffffff; /*#040b14; */
   overflow-y: auto;
 }
 
@@ -86,10 +86,16 @@ h6 {
   font-size: 24px;
   margin: 0;
   padding: 0;
-  font-weight: 600;
-  -moz-text-align-last: center;
-  text-align-last: center;
+  font-weight: 500;
+  padding-top: 50px;
+  padding-left: 10px;
   font-family: "Poppins", sans-serif;
+}
+
+#header .profile p {
+  padding-left: 10px;
+  font-weight: 5;
+  font-family: "Montserrat", sans-serif;
 }
 
 #header .profile h1 a,
@@ -120,7 +126,7 @@ h6 {
 }
 
 #main {
-  margin-left: 400px;
+  margin-left: 350px;
   margin-right: 50px;
 }
 
@@ -170,6 +176,7 @@ h6 {
   display: flex;
   align-items: center;
   color: #a8a9b4;
+  font-family: "Poppins", sans-serif;
   padding: 12px 15px;
   margin-bottom: 8px;
   transition: 0.3s;
@@ -266,7 +273,7 @@ h6 {
 #hero p {
   color: #fff;
   margin-bottom: 50px;
-  font-size: 26px;
+  font-size: 35px;
   font-family: "Poppins", sans-serif;
 }
 
