--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+/*
+Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
+*/
+
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900");
 
 
@@ -827,3 +831,4 @@
 		font-size: 1.75em;
 	}
 }
+
