--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,25 @@
+/*
+Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
+*/
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
 body {
   font-family: "Montserrat", sans-serif;
-  color: #272829; /*#f2f2f2*/
+  color: #ffff; /*#f2f2f2*/
   background: #345539;
+}
+
+img{
+  height: 400px;
+  width: auto;
+  display:block;
+  margin:auto;
+}
+
+.fill {
+  object-fit: fill;
 }
 
 a {
@@ -503,7 +518,6 @@ section {
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #e4edf9;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
